<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_bg_drawable">
	    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="20dp">
	    
	    <TextView 
	        android:text="@string/new_game_title"
       	    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	style="@style/BigTitle"
	    	android:layout_marginBottom="5dp"/>
	    
	    <View style="@style/BlackDivider"
	        android:layout_marginBottom="20dp" />
	    
   		<TextView
	   	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_game_head"
		    style="@style/SubTitle"/>
	    
		<com.samsung.android.sample.coinsoccer.settings.GameSettingsView
		    android:id="@+id/game_settings"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    style="@style/SubBox"/>
		
		<TextView
	   	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_first_player_head"
		    style="@style/SubTitle"/>
		
		<com.samsung.android.sample.coinsoccer.settings.PlayerSettingsView 
		    android:id="@+id/first_player_settings"
		   	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/SubBox"/>
		
		<TextView
	   	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_second_player_head"
		    style="@style/SubTitle"/>

		<LinearLayout 
		    style="@style/SubBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		    
			<LinearLayout 
				android:layout_width="match_parent"
			    android:layout_height="wrap_content">
			    
	    		<TextView
	    		    style="@style/SettingsText"
			   	    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/player_type"/>
			    
			    <CheckBox
			        style="@style/SettingsText"
			        android:id="@+id/local_player_button"
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/local_player"
			    	android:layout_marginRight="10dp" />
			    
				<CheckBox
				    style="@style/SettingsText"
	  			    android:id="@+id/remote_player_button"
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/remote_player"/>
			</LinearLayout>
			
			<View 
			    android:id="@+id/second_player_divider"
			    style="@style/BlackDivider" 
			    android:visibility="gone"/>
			
			<com.samsung.android.sample.coinsoccer.settings.PlayerSettingsView
			    android:id="@+id/second_player_settings"
			   	android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:layout_marginTop="5dp"/>
		</LinearLayout>
			
	   	<TextView
	   	    android:layout_gravity="right"
		    android:id="@+id/start_game_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/start_game_button"
		    android:enabled="false"
		    style="@style/BigBlackButton"/>
	</LinearLayout>
</ScrollView>
