<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:useDefaultMargins="false"
    android:rowCount="4"
    android:columnCount="2"
    android:alignmentMode="alignBounds">

    <ImageView
        android:layout_columnSpan="2"
        android:id="@+id/color_display"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:scaleType="center"
		android:background="@drawable/wood_bg_drawable"
        android:layout_marginBottom="5dp"
        android:src="@drawable/player_coin_drawable" 
        android:contentDescription="@string/color_display"/>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left|center_vertical"
	    android:text="@string/red_label"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
	
    <SeekBar
        android:id="@+id/red_bar"
        android:layout_gravity="fill_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:text="@string/green_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/green_bar"
        android:layout_gravity="fill_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:text="@string/blue_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/blue_bar"
        android:layout_gravity="fill_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</GridLayout>